# turing

./: Cargo.toml  README.md
examples/: append.tng  next_integer.tng  palindrome.tng
src/: lib.rs  main.rs
